compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__qualified_to_unqualified_import_in_list_and_tuple.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 2545
expression: "\nimport option\n\npub fn main() {\n    let list = [option.Some(1), option.None]\n    let tuple = #(option.Some(2), option.None)\n}\n"
---
----- BEFORE ACTION

import option

pub fn main() {
    let list = [option.Some(1), option.None]
                ▔▔▔▔▔▔▔▔▔▔▔↑                
    let tuple = #(option.Some(2), option.None)
}


----- AFTER ACTION

import option.{Some}

pub fn main() {
    let list = [Some(1), option.None]
    let tuple = #(Some(2), option.None)
}
