compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__qualified_to_unqualified_import_in_pattern.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 2279
expression: "\nimport option\n\npub fn main() -> Int {\n  case option.Some(1) {\n    option.Some(value) -> value\n    option.None -> 0\n  }\n}\n"
---
----- BEFORE ACTION

import option

pub fn main() -> Int {
  case option.Some(1) {
    option.Some(value) -> value
          ▔▔▔▔▔▔▔▔↑            
    option.None -> 0
  }
}


----- AFTER ACTION

import option.{Some}

pub fn main() -> Int {
  case Some(1) {
    Some(value) -> value
    option.None -> 0
  }
}
