compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__qualified_to_unqualified_import_multiple_imports.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 2218
expression: "\nimport option\nimport wobble\n\npub fn main() {\n  option.Some(2)\n  wobble.Wibble(1)\n}\n"
---
----- BEFORE ACTION

import option
import wobble

pub fn main() {
  option.Some(2)
  wobble.Wibble(1)
        ▔▔▔▔▔▔▔↑  
}


----- AFTER ACTION

import option
import wobble.{Wibble}

pub fn main() {
  option.Some(2)
  Wibble(1)
}
