compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__qualified_to_unqualified_import_multiple_line.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 2453
expression: "\nimport option.{\n    type Option,\n    None,\n}\n\npub fn main() {\n  option.Some(1)\n}\n"
---
----- BEFORE ACTION

import option.{
    type Option,
    None,
}

pub fn main() {
  option.Some(1)
        ▔▔▔▔▔↑  
}


----- AFTER ACTION

import option.{
    type Option,
    None, Some
}

pub fn main() {
  Some(1)
}
