compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__qualified_to_unqualified_import_multiple_line_aliased.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 2527
expression: "\nimport option.{\n    type Option,\n    None} as opt\n\npub fn main() {\n  opt.Some(1)\n}\n"
---
----- BEFORE ACTION

import option.{
    type Option,
    None} as opt

pub fn main() {
  opt.Some(1)
     ▔▔▔▔▔↑  
}


----- AFTER ACTION

import option.{
    type Option,
    None, Some} as opt

pub fn main() {
  Some(1)
}
